--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,2 +1,7 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+
+// font-family: 'VT323', monospace;
+// font-family: 'Bungee Shade', cursive;
+// font-family: 'Bungee', cursive;
+// font-family: 'Rubik', sans-serif;
