--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,7 +1,11 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 
-// font-family: 'VT323', monospace;
-// font-family: 'Bungee Shade', cursive;
-// font-family: 'Bungee', cursive;
-// font-family: 'Rubik', sans-serif;
+
+@import 'colors';
+@import 'typography';
+@import 'layout';
+@import 'theme';
+
+// this must be entered last!!
+@import 'breakpoints';
