Add commented code to layout and theme
- Add commented code from training yesterday to layout.
(commented because it broke code)

- Add future plan to theme

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -12,3 +12,5 @@
 //   background-color: $quote-background-color;
 //   font-size: 30px;
 // }
+
+//Change hover icon from highlight bar to mouse or finger for anchors
