Edit layout to start working game-board
Changes
- Make layout to work for screen 1200px wide and over
- Add commented code to breakpoints to edit in next commit

Future Plans
- Make a game board that is centered and unbroken for each screen size.

--- a/assets/styles/breakpoints.scss
+++ b/assets/styles/breakpoints.scss
@@ -16,3 +16,20 @@
 //     max-width: 700px;
 //   }
 // }
+
+// container {
+//   @include breakpoint(tiny) {
+//     max-width: 400px;
+//   }
+
+//   @include breakpoint(small) {
+//     max-width: 500px;
+//   }
+
+//   @include breakpoint(medium) {
+//     max-width: 700px;
+
+//   @include breakpoint(large) {
+//     max-width: 700px;
+//   }
+// }
