--- a/assets/styles/breakpoint.scss
+++ b/assets/styles/breakpoint.scss
@@ -1,5 +1,6 @@
 $breakpoints: (
-'tiny': (max-width: 767px),
+'tiny': (max-width: 459px),
+'x-small': (min-width: 460px),
 'small': (min-width: 768px),
 'medium': (min-width: 992px),
 'large': (min-width: 1200px),
