Edit authorization of user
Working:
  - Clicking new game without sign in prompts warning
  - New user can be registered

--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -59,6 +59,11 @@ hr {
   text-align: center;
 }
 
+.alert-danger {
+  margin: 0 auto;
+  width: 460px;
+}
+
 .new-game-text {
   clear: both;
   margin: 10px 5px;
