--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -14,10 +14,21 @@ hr {
   border: 1px solid $black;
 }
 
+//Change hover icon from highlight bar to mouse or finger for anchors
 a:hover {
   cursor: pointer;
   text-decoration: none;
 }
 
+.game-cell:hover {
+  background-color: $grey;
+}
 
-//Change hover icon from highlight bar to mouse or finger for anchors
+.alert-link {
+  text-decoration: underline;
+}
+
+.alert-link:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
