Progress on login javascript
- Improve hides/shows
- New error messages

--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -55,7 +55,12 @@ hr {
   width: 100%;
 }
 
+.sign-in-alert-danger {
+  float: right;
+}
+
 .game-container {
+  clear: both;
   text-align: center;
 }
 
