Add empty div for winner, fix credit to bottom
Changes
- Add empty div called 'win-tie-msg'
- Fix created by credit to bottom left of screen
- Make html set to full height at large breakpoint

Bug
- Game overlaps with name from 1200px to 1273 px screen width

--- a/assets/styles/breakpoints.scss
+++ b/assets/styles/breakpoints.scss
@@ -89,6 +89,12 @@
   }
 }
 
+html {
+  @include breakpoint(large) {
+    height: 1174px;
+  }
+}
+
 // .game-cell {
 //   height: $height;
 //   width: ($row-width / 3);
