Vertically align X's & O's in cells
Add line height equal to cell size to achieve vertical alignment in
the cell.  Increase font size to fill cell more.

--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -1,3 +1,4 @@
+@import 'layout';
 // margin
 // width and friends (like max-width)
 // line-height
@@ -29,5 +30,6 @@ body {
 }
 
 .game-cell {
-  font-size: 270px;
+  font-size: $cell-size * 1.2;
+  line-height: 235px;
 }
