Edit breakpoints to properly fit game pieces.
Add game piece text size and line height into breakpoints to make page
reactive.  Game board works at all sizes.  Still need to work to board
centered at smaller sizes.

--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -17,7 +17,7 @@ $vt323: 'VT323', monospace;
 $font-size: 14px;
 $line-height: 1.6;
 $heading-line-height: 2;
-
+$game-piece-size: $cell-size * 1.15;
 
 body {
   color: $charcoal;
@@ -30,6 +30,6 @@ body {
 }
 
 .game-cell {
-  font-size: $cell-size * 1.2;
-  line-height: 235px;
+  font-size: $game-piece-size;
+  line-height: $cell-size;
 }
