--- a/assets/styles/breakpoints.scss
+++ b/assets/styles/breakpoints.scss
@@ -65,27 +65,37 @@
 
 .game-cell {
   @include breakpoint(tiny) {
+    font-size: ($game-piece-size * 3 / 12);
     height: ($cell-size * 3 / 12);
+    line-height: ($cell-size * 3 / 12);
     width: ($cell-size * 3 / 12);
   }
 
   @include breakpoint(x-small) {
+    font-size: ($game-piece-size * 4 / 12);
     height: ($cell-size * 4 / 12);
+    line-height: ($cell-size * 4 / 12);
     width: ($cell-size * 4 / 12);
   }
 
   @include breakpoint(small) {
+    font-size: ($game-piece-size * 7.68 / 12);
     height: ($cell-size * 7.68 / 12);
+    line-height: ($cell-size * 7.68 / 12);
     width: ($cell-size * 7.68 / 12);
   }
 
   @include breakpoint(medium) {
+    font-size: ($game-piece-size * 9.92 / 12);
     height: ($cell-size * 9.92 / 12);
+    line-height: ($cell-size * 9.92 / 12);
     width: ($cell-size * 9.92 / 12);
   }
 
   @include breakpoint(large) {
+    font-size: $game-piece-size;
     height: $cell-size;
+    line-height: $cell-size;
     width: $cell-size;
   }
 }
