Edit 'small' breakpoint width
Change 'small' breakpoint from 768px to 680px.

--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -71,8 +71,8 @@ hr {
   text-align: center;
 }
 
-.no-sign-up-alert-danger {
-  margin: 0 auto;
+.no-sign-in-alert-danger {
+  margin: 5px auto;
   width: 460px;
 }
 
