--- a/assets/styles/breakpoints.scss
+++ b/assets/styles/breakpoints.scss
@@ -1,28 +1,7 @@
 @import 'breakpoint';
 @import 'layout';
 @import 'typography';
-
-.container {
-  @include breakpoint(tiny) {
-    max-width: 100%;
-  }
-
-  @include breakpoint(x-small) {
-    max-width: 460px;
-  }
-
-  @include breakpoint(small) {
-    max-width: 768px;
-  }
-
-  @include breakpoint(medium) {
-    max-width: 992px;
-  }
-
-  @include breakpoint(large) {
-    max-width: 100%;
-  }
-}
+@import 'theme';
 
 .board-row {
   @include breakpoint(tiny) {
@@ -30,15 +9,15 @@
   }
 
   @include breakpoint(x-small) {
-    width: 75%;
+    width: $row-width * .8;
   }
 
   @include breakpoint(small) {
-    width: ($row-width * 7.68 / 12);
+    width: $row-width;
   }
 
   @include breakpoint(medium) {
-    width: ($row-width * 9.92 / 12);
+    width: $row-width;
   }
 
   @include breakpoint(large) {
@@ -48,37 +27,27 @@
 
 .game-cell {
   @include breakpoint(tiny) {
-    font-size: ($game-piece-size * 3 / 12);
-    height: ($cell-size * 3 / 12);
-    line-height: ($cell-size * 3 / 12);
-    width: ($cell-size * 3 / 12);
+    height: $cell-size;
+    width: $cell-size;
   }
 
   @include breakpoint(x-small) {
-    font-size: ($game-piece-size * 4 / 12);
-    height: ($cell-size * 4 / 12);
-    line-height: ($cell-size * 4 / 12);
-    width: ($cell-size * 4 / 12);
+    height: $cell-size * .79;
+    width: $cell-size * .79;
   }
 
   @include breakpoint(small) {
-    font-size: ($game-piece-size * 7.68 / 12);
-    height: ($cell-size * 7.68 / 12);
-    line-height: ($cell-size * 7.68 / 12);
-    width: ($cell-size * 7.68 / 12);
+    height: $cell-size;
+    width: $cell-size;
   }
 
   @include breakpoint(medium) {
-    font-size: ($game-piece-size * 9.92 / 12);
-    height: ($cell-size * 9.92 / 12);
-    line-height: ($cell-size * 9.92 / 12);
-    width: ($cell-size * 9.92 / 12);
+    height: $cell-size;
+    width: $cell-size;
   }
 
   @include breakpoint(large) {
-    font-size: $game-piece-size;
     height: $cell-size;
-    line-height: $cell-size;
     width: $cell-size;
   }
 }
@@ -91,33 +60,23 @@
 
 .title {
   @include breakpoint(tiny) {
-    font-size: 5.2vw;
-    margin-left: 4px;
-    margin-top: 2.8vh;
+
   }
 
   @include breakpoint(x-small) {
-    font-size: 6.7vw;
-    margin-left: 4px;
-    margin-top: 2vh;
+
   }
 
   @include breakpoint(small) {
-    font-size: ($title-size * .94);
-    margin: inherit;
-    margin-left: 4px;
+
   }
 
   @include breakpoint(medium) {
-    font-size: $title-size;
-    margin: inherit;
-    margin-left: 4px;
+
   }
 
   @include breakpoint(large) {
-    font-size: $title-size;
-    margin: inherit;
-    margin-left: 4px;
+
   }
 }
 
