--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -1,8 +1,13 @@
+$background-width: 108vw;
 $row-width: 91vh;
 $cell-size: $row-width / 3.06;
 $title-height: 15%;
 $title-width: 45%;
 $title-top-padding: 20vh;
+
+// html {
+//   height: 72vw;
+// }
 
 body {
   overflow: hidden;
@@ -14,7 +19,7 @@ p {
 }
 
 .background {
-  height: 100%;
+  // height: 72vw;
   left: 0;
   position: fixed;
   top: 0;
@@ -25,7 +30,7 @@ p {
 
 .background-vid {
   // height: 100vh;
-  width: 106vw;
+  width: $background-width;
   z-index: -800;
 }
 
@@ -96,11 +101,9 @@ p {
   width: $cell-size;
 }
 
-footer {
-  bottom: 0;
-  position: fixed;
-}
-
 .credit {
+  bottom: 0;
   margin: 0 0 .5vh 1vw;
+  position: absolute;
+  text-align: left;
 }
