Improve master UI.
Make select-user false and split email at @ to get 'username' for
welcome message.

--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -29,6 +29,7 @@ p {
   // justify-content: center;
   margin-right: ($header-margin * 1.5);
   margin-top: $header-margin;
+  user-select: text;
 }
 
 .welcome-msg {
