--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -7,6 +7,19 @@ body {
 }
 
 .title {
+  opacity: .0;
+  transform: translate3d(0, 0, 0) scale(2.2);
+  user-select: none;
+}
+
+// .title {
+//   user-select: none;
+// }
+
+.loaded .title {
+  opacity: 1;
+  transform: translate3d(0, 0, 0) scale(1);
+  transition: 9s;
   user-select: none;
 }
 
