--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -5,17 +5,12 @@ $title-height: 15%;
 $title-width: 45%;
 $title-top-padding: 20vh;
 
-// html {
-//   height: 75vw;
-// }
-
 body {
   overflow: hidden;
   // z-index: 10;
 }
 
 .background {
-  // height: 72vw;
   left: 0;
   position: fixed;
   top: 0;
@@ -25,7 +20,6 @@ body {
 }
 
 .background-vid {
-  // height: 100vh;
   width: $background-width;
   z-index: -800;
 }
@@ -92,6 +86,7 @@ body {
 
   height: $cell-size;
   margin: $cell-size * .01;
+  overflow: hidden;
   padding: 0;
   text-align: center;
   width: $cell-size;
