--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -6,6 +6,7 @@ $black: #000;
 $red: #f00;
 $stranger-red: #cb3312;
 $stranger-shadow: #bf0607;
+$stranger-blue: #2f9c9c;
 $dark-blue: #052238;
 $near-black: #05050c;
 
